--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@types/node": "^16.11.34",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
+    "date-fns": "^2.28.0",
+    "pnpm": "^7.1.0",
     "react": "^18.1.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-is": ">= 16.8.0",
@@ -50,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-date-range": "^1.4.3",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.13",
     "tailwindcss": "^3.0.24"
