--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@craco/craco": "^6.4.3",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@testing-library/dom": "^8.13.0",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/node": "^16.11.34",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
     "date-fns": "^2.28.0",
+    "path": "^0.12.7",
     "pnpm": "^7.1.0",
     "react": "^18.1.0",
     "react-date-range": "^1.4.0",
@@ -22,7 +24,7 @@
     "react-icons": "^4.3.1",
     "react-is": ">= 16.8.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "4.0.3",
     "styled-components": "^5.3.5",
     "twin.macro": "^2.8.2",
     "typescript": "^4.6.4",
@@ -56,6 +58,7 @@
     "@types/react-date-range": "^1.4.3",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.13",
+    "react-error-overlay": "6.0.9",
     "tailwindcss": "^3.0.24"
   }
 }
