--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@babel/core": ">=7.0.0 <8.0.0",
     "@babel/plugin-syntax-flow": "^7.14.5",
     "@babel/plugin-transform-react-jsx": "^7.14.9",
-    "@craco/craco": "^6.4.3",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@testing-library/dom": "^8.13.0",
@@ -16,7 +15,6 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
     "date-fns": "^2.28.0",
-    "path": "^0.12.7",
     "pnpm": "^7.1.0",
     "react": "^18.1.0",
     "react-date-range": "^1.4.0",
@@ -24,16 +22,16 @@
     "react-icons": "^4.3.1",
     "react-is": ">= 16.8.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.1.0-next.14",
     "styled-components": "^5.3.5",
     "twin.macro": "^2.8.2",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
