--- a/client/package.json
+++ b/client/package.json
@@ -59,5 +59,6 @@
     "postcss": "^8.4.13",
     "react-error-overlay": "6.0.9",
     "tailwindcss": "^3.0.24"
-  }
+  },
+  "proxy": "http://localhost:7777/api/"
 }
